# calculator-cli_pro

./: LICENSE.txt  pyproject.toml
calculator/: cli.py  model.py
