[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["que miras <saraft31082004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
calc = "calculator.cli:calc"